# concatenator

./: .clang  .gitignore  CMakeLists.txt  README.md  config.ini
include/: ArgumentParser.h  AudioDatabase.h  AudioFile.h  DataHandler.h  argument_parser.h  hdf5helper.h  logger.h
include/analyses/: analysis.h  analysis_base.h  f0.h  rms.h
src/: ArgumentParser.cpp  AudioDatabase.cpp  AudioFile.cpp  argument_parser.cpp  concatenator.cpp  logger.cpp
src/analyses/: rms.cpp
test/: Basic_Tests.cpp  Concatenator_Test.cpp
